# MLOps-Assignement

./: .env  README.md  pyproject.toml  requirements.txt
backend/api/users/: auth.py  data_source.py  main.py
backend/db/: utils.py
backend/db/models/: base.py  data_source.py  employee.py  users.py
backend/schemas/: employee.py
backend/services/google_oauth/: crud.py  service.py
backend/swagger/: __init__.py  views.py
env/: pyvenv.cfg
